--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "frontend": "vite",
-    "start": "concurrently -n 'backend,frontend' -c  \"red,blue\" \"nodemon  server/app\" \"npm run frontend\"",
+    "start": "vite",
+    "star1t": "concurrently -n 'backend,frontend' -c  \"red,blue\" \"nodemon  server/app\" \"npm run frontend\"",
     "build": "tsc && vite build",
     "preview": "vite preview 5000 --strictPort",
     "format": "prettier --write .",
