--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "papaparse": "^5.5.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "sass": "^1.85.1",
