translation and validate password/email

--- a/.env_sample
+++ b/.env_sample
@@ -1,5 +1,6 @@
 NODE_ENV=development
-PORT=Port for Backend
+PORT=Port Port for Backend
+CLIENT_URL url for frontend
 MONGO_URI=Password for mongoDB
 ACCESS_TOKEN_SECRETAdd your secret token key here
 USER_PASSWORD = MongoDb username
