--- a/package.json
+++ b/package.json
@@ -35,11 +35,16 @@
     "csv-parser": "^3.2.0",
     "express": "^4.21.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.2.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
