--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.6.0",
