api currency key

--- a/.env_sample
+++ b/.env_sample
@@ -6,3 +6,4 @@ ACCESS_TOKEN_SECRETAdd your secret token key here
 USER_PASSWORD = MongoDb username
 PROJECT_NAME = Project name
 BCRYPT_SALT_ROUNDS = 10
+VITE_CURRENCY_API_KEY = Your currency api Key
