--- a/package.json
+++ b/package.json
@@ -32,58 +32,59 @@
     "defaults"
   ],
   "dependencies": {
+    "cally": "^0.8.0",
     "csv-parser": "^3.2.0",
-    "express": "^4.21.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "express": "^5.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.2.0",
+    "react-router": "^7.5.0",
     "react-select": "^5.10.1"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^2.6.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^4.9.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-perfectionist": "^4.11.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
-    "lint-staged": "^15.4.3",
-    "mongoose": "^8.11.0",
+    "lint-staged": "^15.5.0",
+    "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "papaparse": "^5.5.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "sass": "^1.85.1",
-    "stylelint": "^16.15.0",
-    "stylelint-config-standard": "^37.0.0",
+    "sass": "^1.86.3",
+    "stylelint": "^16.18.0",
+    "stylelint-config-standard": "^38.0.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-scss": "^6.11.1",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.25.0",
-    "vite": "^6.2.0",
-    "vite-plugin-checker": "^ 0.9.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.0",
+    "vite": "^6.2.5",
+    "vite-plugin-checker": "^0.9.1",
     "vite-plugin-eslint2": "^5.0.3"
   }
 }
