--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "defaults"
   ],
   "dependencies": {
-    "cally": "^0.8.0",
     "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "react": "^19.1.0",
+    "react-day-picker": "^9.6.5",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-redux": "^9.2.0",
