--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   ],
   "dependencies": {
     "csv-parser": "^3.2.0",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.6.6",
