--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
   ],
   "dependencies": {
     "csv-parser": "^3.2.0",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "react": "^19.1.0",
-    "react-day-picker": "^9.6.5",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-redux": "^9.2.0",
@@ -44,19 +45,19 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.6.1",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.4.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -69,7 +70,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
-    "lint-staged": "^15.5.0",
+    "lint-staged": "^15.5.1",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
@@ -82,8 +83,8 @@
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-scss": "^6.11.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^6.2.5",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.2.6",
     "vite-plugin-checker": "^0.9.1",
     "vite-plugin-eslint2": "^5.0.3"
   }
