--- a/package.json
+++ b/package.json
@@ -32,60 +32,61 @@
     "defaults"
   ],
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "express": "^5.1.0",
     "react": "^19.1.0",
-    "react-day-picker": "^9.6.7",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
-    "react-error-boundary": "^5.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.5.0",
+    "react-router": "^7.6.0",
     "react-select": "^5.10.1"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^2.7.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@vitejs/plugin-react": "^4.4.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^4.11.0",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-perfectionist": "^4.13.0",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.1.0",
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
-    "lint-staged": "^15.5.1",
-    "mongoose": "^8.13.2",
+    "lint-staged": "^16.0.0",
+    "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.10",
     "papaparse": "^5.5.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "sass": "^1.86.3",
-    "stylelint": "^16.18.0",
+    "sass": "^1.89.0",
+    "stylelint": "^16.19.1",
     "stylelint-config-standard": "^38.0.0",
-    "stylelint-config-standard-scss": "^14.0.0",
-    "stylelint-scss": "^6.11.1",
+    "stylelint-config-standard-scss": "^15.0.0",
+    "stylelint-scss": "^6.12.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.1",
-    "vite-plugin-checker": "^0.9.1",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5",
+    "vite-plugin-checker": "^0.9.3",
     "vite-plugin-eslint2": "^5.0.3"
   }
 }
