--- a/package.json
+++ b/package.json
@@ -42,49 +42,49 @@
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.6.0",
+    "react-router": "^7.6.2",
     "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.8.2",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "eslint": "^9.26.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-import-resolver-typescript": "^4.4.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^4.13.0",
-    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-perfectionist": "^4.15.0",
+    "eslint-plugin-prettier": "^5.5.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.1.0",
+    "globals": "^16.2.0",
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
-    "lint-staged": "^16.0.0",
-    "mongoose": "^8.14.3",
-    "multer": "^1.4.5-lts.1",
+    "lint-staged": "^16.1.2",
+    "mongoose": "^8.16.0",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.10",
-    "papaparse": "^5.5.2",
-    "postcss": "^8.5.3",
+    "papaparse": "^5.5.3",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.3",
-    "sass": "^1.89.0",
-    "stylelint": "^16.19.1",
+    "sass": "^1.89.2",
+    "stylelint": "^16.20.0",
     "stylelint-config-standard": "^38.0.0",
-    "stylelint-config-standard-scss": "^15.0.0",
-    "stylelint-scss": "^6.12.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-scss": "^6.12.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
+    "typescript-eslint": "^8.34.1",
     "vite": "^6.3.5",
     "vite-plugin-checker": "^0.9.3",
     "vite-plugin-eslint2": "^5.0.3"
