--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,8 @@
   "extends": ["stylelint-config-standard-scss"],
   "ignoreFiles": ["**/variables.module.scss", "dist/**"],
   "rules": {
-    "scss/at-extend-no-missing-placeholder": null
+    "scss/at-extend-no-missing-placeholder": null,
+    "selector-pseudo-element-no-unknown": null,
+    "selector-type-no-unknown": null
   }
 }
