--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,11 @@
 {
   "extends": ["stylelint-config-standard-scss"],
-  "ignoreFiles": ["**/variables.module.scss", "dist/**", "**/_select-box.scss"],
+  "ignoreFiles": [
+    "**/variables.module.scss",
+    "dist/**",
+    "**/_select-box.scss",
+    "**/_date-picker.scss"
+  ],
   "rules": {
     "scss/at-extend-no-missing-placeholder": null,
     "selector-pseudo-element-no-unknown": [
@@ -26,12 +31,6 @@
           "inline-start",
           "inline-end"
         ]
-      }
-    ],
-    "selector-pseudo-class-no-unknown": [
-      true,
-      {
-        "ignoreTypes": ["target-current"]
       }
     ]
   }
