--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "express": "^5.1.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
