--- a/package.json
+++ b/package.json
@@ -32,60 +32,64 @@
     "defaults"
   ],
   "dependencies": {
+    "@babel/preset-typescript": "^7.28.5",
     "@popperjs/core": "^2.11.8",
     "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "express": "^5.1.0",
-    "react": "^19.1.1",
-    "react-day-picker": "^9.11.0",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-compiler-healthcheck": "^1.0.0",
+    "react-day-picker": "^9.11.1",
+    "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.9.3",
-    "react-select": "^5.10.2"
+    "react-router": "^7.9.4",
+    "react-select": "^5.10.2",
+    "vite-plugin-babel": "^1.3.2"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "^2.9.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@reduxjs/toolkit": "^2.9.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.21",
+    "babel-plugin-react-compiler": "^1.0.0",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.2.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "eslint": "^9.36.0",
+    "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^4.15.0",
+    "eslint-plugin-perfectionist": "^4.15.1",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
-    "lint-staged": "^16.2.3",
-    "mongoose": "^8.18.3",
+    "lint-staged": "^16.2.6",
+    "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "sass": "^1.93.2",
-    "stylelint": "^16.24.0",
-    "stylelint-config-standard": "^39.0.0",
+    "stylelint": "^16.25.0",
+    "stylelint-config-standard": "^39.0.1",
     "stylelint-config-standard-scss": "^16.0.0",
     "stylelint-scss": "^6.12.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7",
+    "typescript-eslint": "^8.46.2",
+    "vite": "^7.1.12",
     "vite-plugin-checker": "^0.11.0",
     "vite-plugin-eslint2": "^5.0.4"
   }
